--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
+    <meta http-equiv="refresh" content="0; url=https://qmstesting.com" />
     <title>Redirecting...</title>
-    <link rel="canonical" href="https://qmstesting.com">
-    <meta http-equiv="refresh" content="0; url=https://qmstesting.com">
   </head>
   <body>
-    <p>If you're not redirected, <a href="https://qmstesting.com">click here</a>.</p>
+    <p>Redirecting to <a href="https://qmstesting.com">qmstesting.com</a>...</p>
   </body>
 </html>
+
